SERVER-33954 Modified getCollectionRoutingInfoWithRefresh to refresh twice if the first refresh is not performed by its own thread

(cherry picked from commit b93fe0e61bf7e8bc96da2edeb66afa1b915b0b77)